package com.easyhome.common.core.resource;

/**
 * TODO {Description}
 *
 * @author by kevin on 5/9/14.
 */
public class Writer {
}
